[package]
name = "firefly-data-sqlx"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Firefly Framework for Rust — relational repository adapter over sqlx (Postgres/MySQL/SQLite)"

[features]
# All three relational backends are enabled by default. The workspace
# catalog already compiles `sqlx` with the `postgres` / `mysql` / `sqlite`
# drivers, so these features only gate which code paths this crate exposes;
# disable one to drop its repository branch (e.g. `--no-default-features
# --features sqlite` for a SQLite-only build).
default = ["postgres", "mysql", "sqlite"]
postgres = []
mysql = []
sqlite = []
# Opt-in actuator integration: a `db` HealthIndicator (`SELECT 1`) and a
# per-query metrics recorder. Off by default so the base adapter pulls in no
# observability stack; enable it from a starter that wires `/actuator/health`.
actuator = ["dep:firefly-actuator", "dep:firefly-observability"]

[dependencies]
firefly-data = { workspace = true }
firefly-reactive = { workspace = true }
firefly-kernel = { workspace = true }
firefly-actuator = { workspace = true, optional = true }
firefly-observability = { workspace = true, optional = true }
sqlx = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
async-stream = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
