[package]
name = "firefly-data"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Firefly Framework for Rust — Filter DSL, Page, Repository port"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
firefly-kernel = { workspace = true }
firefly-reactive = { workspace = true }
tokio-postgres = { workspace = true }
futures = { workspace = true }
async-stream = { workspace = true }
