[package]
name = "firefly-eda-postgres"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Firefly Framework for Rust — Postgres broker adapter: outbox table, NOTIFY/LISTEN, advisory-lock drain, offsets"

[dependencies]
firefly-eda = { workspace = true }
firefly-kernel = { workspace = true }
tokio-postgres = { workspace = true }
async-trait = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
sha2 = { workspace = true }
chrono = { workspace = true }
globset = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
futures = { workspace = true }
serde_json = { workspace = true }
