[package]
name = "firefly-eda-redis"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Firefly Framework for Rust — Redis Streams broker adapter: XADD/XREADGROUP/XACK consumer groups"

[dependencies]
firefly-eda = { workspace = true }
firefly-kernel = { workspace = true }
redis = { workspace = true }
async-trait = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
futures = { workspace = true }
serde_json = { workspace = true }
