[package]
name = "firefly-eda"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Firefly Framework for Rust — Event envelope, Publisher/Subscriber, in-memory broker, Kafka/RabbitMQ scaffolds"

[dependencies]
firefly-kernel = { workspace = true }
firefly-observability = { workspace = true }
firefly-reactive = { workspace = true }
# Bridges in-process @TransactionalEventListener events to the broker
# (after-commit externalization); transactional does not depend on eda, so this
# is acyclic.
firefly-transactional = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
futures = { workspace = true }
globset = { workspace = true }
regex = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
futures = { workspace = true }
serde_json = { workspace = true }
