[package]
name = "firefly-eventsourcing"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Firefly Framework for Rust — AggregateRoot + EventStore + Snapshots + Projections"

[dependencies]
firefly-eda = { workspace = true }
firefly-transactional = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
rusqlite = { workspace = true }
tempfile = { workspace = true }
