[package]
name = "firefly"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Firefly Framework for Rust — facade crate — prelude + re-exports of the whole framework + macros"

[dependencies]
firefly-macros = { workspace = true }
firefly-kernel = { workspace = true }
firefly-reactive = { workspace = true }
firefly-web = { workspace = true }
firefly-cqrs = { workspace = true }
firefly-eda = { workspace = true }
firefly-eventsourcing = { workspace = true }
firefly-orchestration = { workspace = true }
firefly-data = { workspace = true }
firefly-cache = { workspace = true }
firefly-config = { workspace = true }
firefly-observability = { workspace = true }
firefly-actuator = { workspace = true }
firefly-scheduling = { workspace = true }
firefly-resilience = { workspace = true }
firefly-security = { workspace = true }
firefly-lifecycle = { workspace = true }
firefly-container = { workspace = true }
firefly-starter-core = { workspace = true }
firefly-starter-web = { workspace = true }
firefly-client = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
serde_json = { workspace = true }
